[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/BasePlateScenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/BasePlateScenes/UI_sprites/UI_settings.png" type="Texture" id=2]
[ext_resource path="res://assets/BasePlateScenes/UI_sprites/UI_settings_select.png" type="Texture" id=3]
[ext_resource path="res://assets/BasePlateScenes/UI_sprites/UI_start.png" type="Texture" id=4]
[ext_resource path="res://assets/BasePlateScenes/UI_sprites/UI_quit.png" type="Texture" id=5]
[ext_resource path="res://assets/BasePlateScenes/UI_sprites/UI_Title.png" type="Texture" id=6]
[ext_resource path="res://assets/BasePlateScenes/UI_sprites/UI_quit_select.png" type="Texture" id=7]
[ext_resource path="res://assets/BasePlateScenes/UI_sprites/UI_start_select.png" type="Texture" id=8]
[ext_resource path="res://assets/BasePlateScenes/BasePlateSprites/darkblue_box.png" type="Texture" id=9]
[ext_resource path="res://assets/BasePlateScenes/UI_sounds/UI-select.mp3" type="AudioStream" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( -716, -128 )
script = ExtResource( 1 )
level_name = "mainmenu"

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 389.0
margin_top = 270.0
margin_right = 646.0
margin_bottom = 338.0
focus_neighbour_bottom = NodePath("../SettingsButton")
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
expand = true

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 389.0
margin_top = 336.0
margin_right = 646.0
margin_bottom = 404.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 389.0
margin_top = 404.0
margin_right = 646.0
margin_bottom = 472.0
focus_neighbour_top = NodePath("../SettingsButton")
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true

[node name="Title" type="TextureRect" parent="."]
margin_left = 172.0
margin_top = 38.0
margin_right = 832.0
margin_bottom = 206.0
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 544, 292 )
scale = Vector2( 11.59, 7.46 )
z_index = -1
texture = ExtResource( 9 )

[node name="sound_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
